--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,10 @@ script:
   - docker run roysha1/react-test npm test -- --coverage
 
 after_success:
-  - docker build -t roysha1/multi-client ./client .
-  - docker build -t roysha1/multi-nginx ./nginx .
-  - docker build -t roysha1/multi-server ./server .
-  - docker build -t roysha1/multi-worker ./worker .
+  - docker build -t roysha1/multi-client ./client
+  - docker build -t roysha1/multi-nginx ./nginx
+  - docker build -t roysha1/multi-server ./server
+  - docker build -t roysha1/multi-worker ./worker
   # Log in to the docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # push images to docker hub
